<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <CheckBoxPreference
        android:id="@+id/pref_conversation_sounds"
        android:defaultValue="true"
        android:key="pref_conversation_sounds"
        android:summary="@string/pref_title_conversation_sounds_desc"
        android:title="@string/pref_title_conversation_sounds" />
    <PreferenceCategory android:title="@string/pref_msgs_notifications_group">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_message_ringtone" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_invites_notifications_group">

        <SwitchPreference
            android:id="@+id/pref_title_new_invite_notifications"
            android:defaultValue="true"
            android:key="notifications_new_invites"
            android:title="@string/pref_title_new_invite_notifications" />
        <SwitchPreference
            android:id="@+id/pref_invite_notification_vibrate"
            android:defaultValue="true"
            android:dependency="notifications_new_invites"
            android:key="pref_invite_notification_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_status_notifications_group">

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_users_online_notification"
            android:summary="@string/pref_title_status_notifications_desc"
            android:title="@string/pref_title_status_notifications" />
    </PreferenceCategory>
    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->

</PreferenceScreen>
