<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/defaultWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:padding="0dp">

            <ImageView
                android:id="@+id/mainProfilePhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/profilePhotoDesc"
                app:srcCompat="@drawable/no_photo" />

            <ImageView
                android:id="@+id/profileStatusFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@null"
                app:srcCompat="@drawable/profile_status_online" />

            <ImageButton
                android:id="@+id/changePhotoBtn"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="26dp"
                android:background="@drawable/baseline_photo_camera_white_48dp"
                android:contentDescription="@string/change_profile_photo"
                android:elevation="0dp" />

            <ProgressBar
                android:id="@+id/photoUploading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/photoLoadingSpinner"
                android:padding="51dp"
                android:visibility="gone" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="164dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:padding="0dp">

            <Spinner
                android:id="@+id/statusSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:background="@null" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="1dp"
                android:layout_height="36dp"
                android:layout_gravity="start"
                android:layout_marginStart="-56dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/nameDesc"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="5dp"
            android:gravity="bottom"
            android:paddingBottom="4dp"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:text="@string/change_user_name" />

        <LinearLayout
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/washedWhite"
            android:elevation="2dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/userNameDisplay"
                style="@style/WindowsLiveDefaultFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/change_user_name_hint"
                android:paddingEnd="0dp"
                android:paddingStart="12dp"
                android:textAlignment="viewStart"
                android:textColor="@color/defaultBlack"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/editNameBtn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="0dp"
                android:layout_weight="0"
                android:background="@null"
                android:contentDescription="@string/change_name_btn_desc"
                android:padding="24dp"
                android:tint="@color/lightGreen"
                app:srcCompat="@drawable/baseline_edit_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/bioDesc"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="15dp"
            android:gravity="bottom"
            android:paddingBottom="4dp"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:text="@string/change_bio" />

        <LinearLayout
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="0"
            android:background="@color/washedWhite"
            android:elevation="2dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/userBioDisplay"
                style="@style/WindowsLiveDefaultFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/change_bio_hint"
                android:paddingEnd="0dp"
                android:paddingStart="12dp"
                android:textAlignment="viewStart"
                android:textColor="@color/defaultBlack"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/editBioBtn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="0dp"
                android:layout_weight="0"
                android:background="@null"
                android:contentDescription="@string/change_bio_btn_desc"
                android:padding="24dp"
                android:tint="@color/lightGreen"
                app:srcCompat="@drawable/baseline_edit_24" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>