<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Design.CoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InvitesActivity"
    tools:showIn="@layout/activity_invites">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/invites_list"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:id="@+id/noInvitesAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/noInvitesImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="12dp"
            android:contentDescription="@string/no_network_msg_detail"
            android:tint="@color/deactivatedColor"
            app:srcCompat="@drawable/ic_flat_msn_messenger" />

        <TextView
            android:id="@+id/noInvitesMsgTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/noPendentInvites"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noInvitesMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:padding="20dp"
            android:text="@string/noPendentInvitesMsg"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>