<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recycler_clickable_item"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="true"
    android:clickable="false"
    android:focusableInTouchMode="false"
    android:gravity="start"
    android:orientation="horizontal"
    android:padding="8dp">

    <FrameLayout
        android:layout_width="62dp"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <ImageView
            android:id="@+id/mainProfilePhoto"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:adjustViewBounds="true"
            android:baselineAligned="true"
            android:contentDescription="@string/profilePhotoDesc"
            android:cropToPadding="false"
            android:scaleType="fitStart" />

        <ImageView
            android:id="@+id/contactStatus"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            app:srcCompat="@drawable/profile_status_offline" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:paddingEnd="0dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp">


        <TextView
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/default_contact_name"
            android:textAlignment="viewStart"
            android:textColor="@color/defaultBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/contactListBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contactName"
            android:layout_marginEnd="30dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:fontFamily="@font/segoe_ui"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/default_bio"
            android:textAppearance="?android:textAppearanceSmall"
            app:layout_constraintStart_toEndOf="@id/notificationCounter" />

        <TextView
            android:id="@+id/notificationCounter"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:background="@drawable/notification_circle"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/default_zero"
            android:textAlignment="center"
            android:textColor="@color/defaultWhite"
            android:textSize="12sp"
            android:visibility="invisible" />


    </RelativeLayout>

</LinearLayout>