<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:paddingEnd="15dp"
    android:paddingStart="60dp"
    android:clipToPadding="false" tools:targetApi="o">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mySentWink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/my_message"
        android:elevation="2dp"
        android:minHeight="66dp"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/mySentWinkTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="58dp"
            android:maxWidth="180dp"
            android:minWidth="50dp"
            android:padding="10dp"
            android:text="@string/default_message_content"
            android:textAlignment="viewStart"
            android:textColor="@color/defaultBlack"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mySentWinkImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/wink_item_shape"
            android:backgroundTint="@color/defaultWhite"
            android:contentDescription="@string/wink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/wink_water_balloon" />

        <ImageButton
            android:id="@+id/playMySentWink"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_play_circle_filled_black_24dp"
            android:contentDescription="@string/playWingMsg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>